--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-elements": "^0.19.1",
     "react-navigation": "^2.5.5",
+    "react-navigation-redux-helpers": "^2.0.2",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6"
   }
 }
